src/app.css
body {margin: 0; padding: 0; overflow: hidden; background-color: rgb(34, 34, 44)}

#container {
position: relative;
}
#top-left-container {
z-index: 10;
position: absolute;
top: 0;
left: 0;
}
#title-box {
margin:20px;
color: white;
font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
z-index:30;
}
h1,h2,h3,h4,h5,h6 {
margin: 5px;
}
#divdescription {
z-index: 10;
position: absolute;
top: 0;
right: 0;
color: black;
background-color: white;
border-radius: 1px;
font-size: 15px;
margin: 20px;
padding: 20px;
width: 500px;
font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
}
#divinfo {
position: relative;
color: black;
background-color: white;
border-radius: 1px;
/* font-size: 25px; */
margin: 20px;
padding: 20px;
width: 200px;
font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
}
#divinfo h1,h2,h3,h4,h5,h6 {
text-align: center;
}
#divinfo h6 {
  font-size: 15px;
}
.tag-div {
position:relative;
height: 50px;
}
.tag-id {
font-size: 15px;
margin: 5px;
max-width: 50px;
display: inline-block;
overflow: hidden;
overflow-x: auto;
line-height: 20px;
vertical-align: middle;
}
.tag-circle {
border-radius: 50%;
width: 20px;
height: 20px; 
background-color: white;
margin-left: 0px;
margin-top: 0px;
display: inline-block;
line-height: 20px;
vertical-align: middle;
}
.tag-pan-btn {
font-size: 15px;
padding: 3px 7px;
margin-left: 5px;
margin-right: 5px;
color: black;
display: inline-block;
height:  50%;
line-height: 20px;
vertical-align: middle;
}
.tag-distance {
font-size: 15px;
max-width: 70px;
overflow: hidden;
display: inline-block;
height:  50%;
line-height: 27px;
vertical-align: middle;
}
.full-width {
width: 100%;
}

.reverse-range {
direction: rtl
}

/*All just for the input range*/
input[type=range] {
height: 26px;
-webkit-appearance: none;
margin: 0;
width: 100%;
}
input[type=range]:focus {
outline: none;
}
input[type=range]::-webkit-slider-runnable-track {
width: 100%;
height: 14px;
cursor: pointer;
box-shadow: 1px 1px 1px #50555C;
background: #50555C;
border-radius: 14px;
border: 0px solid #000000;
}
input[type=range]::-webkit-slider-thumb {
box-shadow: 0px 0px 0px #000000;
border: 0px solid #000000;
height: 20px;
width: 30px;
border-radius: 12px;
background: rgb(23, 184, 190);
cursor: pointer;
-webkit-appearance: none;
margin-top: -3px;
}
input[type=range]:focus::-webkit-slider-runnable-track {
background: #50555C;
}
input[type=range]::-moz-range-track {
width: 100%;
height: 14px;
cursor: pointer;
box-shadow: 1px 1px 1px #50555C;
background: #50555C;
border-radius: 14px;
border: 0px solid #000000;
}
input[type=range]::-moz-range-thumb {
box-shadow: 0px 0px 0px #000000;
border: 0px solid #000000;
height: 20px;
width: 30px;
border-radius: 12px;
background: rgb(23, 184, 190);
cursor: pointer;
}
input[type=range]::-ms-track {
width: 100%;
height: 14px;
cursor: pointer;
background: transparent;
border-color: transparent;
color: transparent;
}
input[type=range]::-ms-fill-lower {
background: #50555C;
border: 0px solid #000000;
border-radius: 28px;
box-shadow: 1px 1px 1px #50555C;
}
input[type=range]::-ms-fill-upper {
background: #50555C;
border: 0px solid #000000;
border-radius: 28px;
box-shadow: 1px 1px 1px #50555C;
}
input[type=range]::-ms-thumb {
margin-top: 1px;
box-shadow: 0px 0px 0px #000000;
border: 0px solid #000000;
height: 20px;
width: 30px;
border-radius: 12px;
background: rgb(23, 184, 190);
cursor: pointer;
}
input[type=range]:focus::-ms-fill-lower {
background: #50555C;
}
input[type=range]:focus::-ms-fill-upper {
background: #50555C;
}
/*End of All just for the input range*/

/* Button */
button {
padding: 8px;
background-color: rgb(23, 184, 190);
border: 0 none;
border-radius: 2px;
font-size: 15px;
color: white;
font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
}

button:hover {
background-color: rgb(15, 101, 104);
}

button:active, .btn-highlight {
background-color: rgb(253, 128, 93);
}

/* Input number */
input[type=number], input[type=text] {
border: 0;
outline: 0;
background: transparent;
border-bottom: 1px solid black;
text-align: right;
font-size: 25px;
width: 100px;
position: relative;
}

input[type=number]:focus, input[type=text]:focus {
border-bottom: 3px solid rgb(23, 184, 190);
}

.float-right {
float: right;
}

.block {
margin-left: 40px;
}

.block label {
display: inline-block;
font-size: 15px;
}

.btn-day {
    padding: 1px 3px;
    margin: 1px;
}

